--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A lifestyle blog about minimalism, technology, design and travel.">
+    <meta name="keywords" content="minimalism, technology, design, travel, blog">
+    <meta name="author" content="glav-git">
     <title>Layout Test</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
