add alts and loading='lazy' for images (edits 4-5)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <div id="posts-grid">
             <div id="post1" class="card grid-col-span-8 grid-row-span-2">
-                <img src="img/post1.png" />
+                <img src="img/post1.png" alt="Beautifyll mountain shore." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">TRAVEL</p>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div id="post2" class="card grid-col-span-4">
-                <img src="img/post2.png" />
+                <img src="img/post2.png" alt="Climber on the mountain." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">Exercise</p>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div id="post3" class="card grid-col-span-4">
-                <img src="img/post3.png" />
+                <img src="img/post3.png" alt="Mirrorless camera" loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">TECH</p>
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div id="post4" class="card grid-col-span-6">
-                <img src="img/post4.png" />
+                <img src="img/post4.png" alt="Guy with drone in left hand." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">TECH</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div id="post5" class="card grid-col-span-6">
-                <img src="img/post5.png" />
+                <img src="img/post5.png" alt="Ya yebu, yakes' black and white metro." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">TUTORIAL</p>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div id="post6" class="card grid-col-span-4">
-                <img src="img/post6.png" />
+                <img src="img/post6.png" alt="Black pen on white background." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">REVIEW</p>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div id="post7" class="card grid-col-span-4">
-                <img src="img/post7.png" />
+                <img src="img/post7.png" alt="Guy with black backpack." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">REVIEW</p>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div id="post8" class="card grid-col-span-4">
-                <img src="img/post8.png" />
+                <img src="img/post8.png" alt="White desk with computer, flower etc." loading="lazy" />
                 <div class="card-content-wrapper">
                     <div>
                         <p class="card-category">REVIEW</p>
