structure refucktore: move nav to header and make h1 as section in main + replace id's with classes (edits 3,6)

--- a/index.html
+++ b/index.html
@@ -17,123 +17,130 @@
 </head>
 
 <body>
-    <nav>
-        <img src="img/logo.svg" alt="Logo" />
-        <div id="nav-links-container">
-            <a class="nav-link" href="">Home</a>
-            <a class="nav-link" href="">Archive</a>
-            <a class="nav-link" href="">About</a>
-        </div>
-    </nav>
+
     <header>
-        <img id="header-logo" src="img/logo.svg" alt="Logo" />
-        <h1>Welcome to Calm – a lifestyle blog about minimalism, technology, design & travel.</h1>
+        <nav>
+            <a class="nav-link" href="">
+                <img src="img/logo.svg" alt="Logo" />
+            </a>
+            <div class="nav-links-container">
+                <a class="nav-link" href="">Home</a>
+                <a class="nav-link" href="">Archive</a>
+                <a class="nav-link" href="">About</a>
+            </div>
+        </nav>
     </header>
     <main>
-        <div id="posts-grid">
-            <div id="post1" class="card grid-col-span-8 grid-row-span-2">
-                <img src="img/post1.png" alt="Beautifyll mountain shore." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">TRAVEL</p>
-                        <h2 class="card-header">Travel spots in Iceland</h2>
-                        <p class="card-description">Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
-                            esse
-                            temporibus et. Aut atque vel labore officiis a dolor et. Molestiae dolor quo eius.
-                            Perferendis
-                            error
-                            eveniet sit quia occaecati excepturi nisi prod.</p>
+        <section class="content-header">
+            <img id="header-logo" src="img/logo.svg" alt="Logo" />
+            <h1>Welcome to Calm – a lifestyle blog about minimalism, technology, design & travel.</h1>
+        </section>
+        <section class="content">
+            <div class="posts-grid">
+                <div id="post1" class="card grid-col-span-8 grid-row-span-2">
+                    <img src="img/post1.png" alt="Beautifyll mountain shore." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">TRAVEL</p>
+                            <h2 class="card-header">Travel spots in Iceland</h2>
+                            <p class="card-description">Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
+                                esse
+                                temporibus et. Aut atque vel labore officiis a dolor et. Molestiae dolor quo eius.
+                                Perferendis
+                                error
+                                eveniet sit quia occaecati excepturi nisi prod.</p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
+                </div>
+                <div id="post2" class="card grid-col-span-4">
+                    <img src="img/post2.png" alt="Climber on the mountain." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">Exercise</p>
+                            <h2 class="card-header">Climbing as exercise</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="post3" class="card grid-col-span-4">
+                    <img src="img/post3.png" alt="Mirrorless camera" loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">TECH</p>
+                            <h2 class="card-header">The move to mirrorless cameras</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="post4" class="card grid-col-span-6">
+                    <img src="img/post4.png" alt="Guy with drone in left hand." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">TECH</p>
+                            <h2 class="card-header">Drone photography on a space budget</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="post5" class="card grid-col-span-6">
+                    <img src="img/post5.png" alt="Ya yebu, yakes' black and white metro." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">TUTORIAL</p>
+                            <h2 class="card-header">How to make the perfect cup of coffee</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="post6" class="card grid-col-span-4">
+                    <img src="img/post6.png" alt="Black pen on white background." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">REVIEW</p>
+                            <h2 class="card-header">The best pen I've ever used</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="post7" class="card grid-col-span-4">
+                    <img src="img/post7.png" alt="Guy with black backpack." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">REVIEW</p>
+                            <h2 class="card-header">Tech-focused travel backpack</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="post8" class="card grid-col-span-4">
+                    <img src="img/post8.png" alt="White desk with computer, flower etc." loading="lazy" />
+                    <div class="card-content-wrapper">
+                        <div>
+                            <p class="card-category">REVIEW</p>
+                            <h2 class="card-header">Desk accessories to keep you organized</h2>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-date">November 24, 2021</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="post2" class="card grid-col-span-4">
-                <img src="img/post2.png" alt="Climber on the mountain." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">Exercise</p>
-                        <h2 class="card-header">Climbing as exercise</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-            <div id="post3" class="card grid-col-span-4">
-                <img src="img/post3.png" alt="Mirrorless camera" loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">TECH</p>
-                        <h2 class="card-header">The move to mirrorless cameras</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-            <div id="post4" class="card grid-col-span-6">
-                <img src="img/post4.png" alt="Guy with drone in left hand." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">TECH</p>
-                        <h2 class="card-header">Drone photography on a space budget</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-            <div id="post5" class="card grid-col-span-6">
-                <img src="img/post5.png" alt="Ya yebu, yakes' black and white metro." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">TUTORIAL</p>
-                        <h2 class="card-header">How to make the perfect cup of coffee</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-            <div id="post6" class="card grid-col-span-4">
-                <img src="img/post6.png" alt="Black pen on white background." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">REVIEW</p>
-                        <h2 class="card-header">The best pen I've ever used</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-            <div id="post7" class="card grid-col-span-4">
-                <img src="img/post7.png" alt="Guy with black backpack." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">REVIEW</p>
-                        <h2 class="card-header">Tech-focused travel backpack</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-            <div id="post8" class="card grid-col-span-4">
-                <img src="img/post8.png" alt="White desk with computer, flower etc." loading="lazy" />
-                <div class="card-content-wrapper">
-                    <div>
-                        <p class="card-category">REVIEW</p>
-                        <h2 class="card-header">Desk accessories to keep you organized</h2>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-date">November 24, 2021</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </section>
     </main>
 
 </body>
